config: mark `node.js` and `pnpm` version

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "email": "jody16888@gmail.com"
   },
   "scripts": {
-    "build": "pnpm run clean && tsup src/main.ts --minify && cpy .env dist/",
+    "build": "pnpm run clean && tsup src/main.ts --minify",
+    "build-copy": "pnpm run build && cpy .env dist/",
     "clean": "rimraf dist",
     "dev": "tsx watch src/main.ts",
     "fmt": "prettier --write .",
@@ -27,5 +28,9 @@
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.2"
+  },
+  "engines": {
+    "node": ">=20.11.1",
+    "pnpm": ">=8.15"
   }
 }
