refactor: change package type to `module`

--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "name": "jonz94",
     "email": "jody16888@gmail.com"
   },
+  "type": "module",
   "scripts": {
-    "build": "pnpm run clean && tsup src/main.ts --minify",
+    "build": "pnpm run clean && tsup src/main.mts --minify",
     "build-copy": "pnpm run build && cpy .env dist/",
     "clean": "rimraf dist",
-    "dev": "cross-env NODE_ENV=dev tsx watch src/main.ts",
+    "dev": "cross-env NODE_ENV=dev tsx watch src/main.mts",
     "fmt": "prettier --write .",
-    "start": "node dist/main.js"
+    "start": "node dist/main.cjs"
   },
   "dependencies": {
     "discord.js": "^14.14.1",
