style: format coding style

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "strictNullChecks": true,
-    "skipLibCheck": true
-  }
+    "skipLibCheck": true,
+  },
 }
