--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "fmt": "prettier --write .",
     "release": "commit-and-tag-version",
     "start": "node dist/main.cjs",
-    "start:dev": "cross-env NODE_ENV=DEV node dist/main.cjs"
+    "start:dev": "cross-env NODE_ENV=DEV node dist/main.cjs",
+    "test": "vitest"
   },
   "dependencies": {
     "discord.js": "^14.14.1",
@@ -30,7 +31,8 @@
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "vitest": "^1.3.1"
   },
   "engines": {
     "node": ">=20.11.1",
