--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "Node16",
-    "rootDir": "./src",
+    "rootDir": "./",
     "outDir": "./dist",
     "removeComments": true,
     "esModuleInterop": true,
