--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "db:studio": "drizzle-kit studio",
     "dev": "cross-env NODE_ENV=DEV tsx watch src/main.mts",
     "fmt": "prettier --write .",
-    "postinstall": "tsx scripts/initialize-env-files.mts",
     "release": "commit-and-tag-version",
+    "setup": "tsx scripts/initialize-env-files.mts",
     "start": "node dist/main.js",
     "start:dev": "cross-env NODE_ENV=DEV node dist/main.js",
     "test": "vitest"
