--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "prettier-plugin-packagejson": "^2.4.12",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
-    "typescript": "^5.4.2",
+    "typescript": "~5.4.2",
     "vitest": "^1.4.0"
   },
   "engines": {
