--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 DISCORD_TOKEN=<DISCORD_TOKEN>
 DISCORD_CLIENT_ID=<DISCORD_CLIENT_ID>
+DATABASE_URL=<DATABASE_URL>
+DATABASE_AUTH_TOKEN=<DATABASE_AUTH_TOKEN>
