--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db": "drizzle-kit",
     "db:generate": "drizzle-kit generate:sqlite",
     "db:migrate": "tsx migrate.mts",
+    "db:migrate:dev": "cross-env NODE_ENV=DEV tsx migrate.mts",
     "db:studio": "drizzle-kit studio",
     "fmt": "prettier --write .",
     "preview": "node dist/main.js",
@@ -24,13 +25,12 @@
     "test": "vitest"
   },
   "dependencies": {
-    "better-sqlite3": "^9.4.3",
+    "@libsql/client": "^0.6.0",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.4"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.9",
     "commit-and-tag-version": "^12.2.0",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.20.14",
