--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 APP_ENV=production
+APP_PORT=3000
 DISCORD_TOKEN=<DISCORD_TOKEN>
 DISCORD_CLIENT_ID=<DISCORD_CLIENT_ID>
 DATABASE_URL=<DATABASE_URL>
