--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "~/db/*": ["./db/*"],
+      "~/src/*": ["./src/*"],
+    },
     "lib": ["ESNext"],
     "target": "ESNext",
     "module": "ESNext",
