--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "scripts": {
     "build": "bun build ./src/main.mts --target bun --outdir ./dist",
     "db": "drizzle-kit",
-    "db:generate": "drizzle-kit generate:sqlite",
-    "db:migrate": "bun migrate.mts",
-    "db:migrate:dev": "bun --env-file=.env.dev migrate.mts",
-    "db:studio": "drizzle-kit studio",
+    "db-generate": "drizzle-kit generate:sqlite",
+    "db-migrate": "bun migrate.mts",
+    "db-migrate-dev": "bun --env-file=.env.dev migrate.mts",
+    "db-studio": "drizzle-kit studio",
     "fmt": "prettier --write .",
     "preview": "bun dist/main.js",
-    "preview:dev": "bun --env-file=.env.dev dist/main.js",
+    "preview-dev": "bun --env-file=.env.dev dist/main.js",
     "release": "bun scripts/bump-version-and-git-tag.mts",
     "setup": "bun scripts/initialize-env-files.mts",
     "start": "bun --env-file=.env.dev --watch src/main.mts",
-    "start:production": "NODE_ENV=PRODUCTION bun --watch src/main.mts",
+    "start-production": "NODE_ENV=PRODUCTION bun --watch src/main.mts",
     "test": "bun test"
   },
   "dependencies": {
