--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-packagejson": "^2.5.3",
-    "typescript": "~5.6.2"
+    "typescript": "^5.6.3"
   },
   "trustedDependencies": [
     "es5-ext",
