--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/db/*": ["./db/*"],
+      "~/db/*": ["./src/db/*"],
       "~/src/*": ["./src/*"],
     },
     "lib": ["ESNext"],
