--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "scripts": {
     "build": "bun build ./src/main.mts --target bun --outdir ./dist",
     "db": "drizzle-kit",
-    "db-generate": "bunx --bun drizzle-kit generate",
-    "db-migrate": "bunx --bun drizzle-kit migrate",
-    "db-migrate-dev": "bun --env-file=.env.dev migrate.mts",
+    "db-generate": "bun --bun ./scripts/db-generate.ts",
+    "db-generate-dev": "bun --bun --env-file=.env.dev ./scripts/db-generate.ts",
+    "db-migrate": "bun --bun ./scripts/db-migrate.ts",
+    "db-migrate-dev": "bun --bun --env-file=.env.dev ./scripts/db-migrate.ts",
+    "db-push-dev": "bun --bun --env-file=.env.dev ./scripts/db-push.ts",
     "db-studio": "bunx --bun drizzle-kit studio",
     "fmt": "prettier --write .",
     "generate-version-file": "bun scripts/generate-version-file.mts",
