--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "discord.js": "^14.17.3",
     "drizzle-orm": "^0.39.2",
     "hono": "^4.7.0",
-    "odiff-bin": "^3.2.0"
+    "odiff-bin": "^3.2.0",
+    "youtubei.js": "^13.0.0"
   },
   "devDependencies": {
     "@types/bun": "^1.2.2",
