fix: skip build `arm64` docker image

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,8 @@ jobs:
       matrix:
         platform:
           - linux/amd64
-          - linux/arm64
+          # FIXME: currently `odiff` does not support arm architecture
+          #- linux/arm64
     steps:
       - name: Prepare
         run: |
