--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "prettier-plugin-packagejson": "^2.5.8",
     "typescript": "^5.7.3"
   },
+  "overrides": {
+    "esbuild": "^0.25.0"
+  },
   "trustedDependencies": [
     "es5-ext",
     "esbuild",
