--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-packagejson": "^2.5.10",
-    "typescript": "^5.7.3"
+    "typescript": "~5.8.2"
   },
   "overrides": {
     "esbuild": "^0.25.0"
